# eurogrant-ai

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  API.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyrightconfig.json
.agents/rules/: local-verification-policy.md
.claude/: CLAUDE.md  settings.json
.claude/workflows/: fix-critical-security.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  create_admin.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 602668b891d0_add_userinvitation_model.py  665cd05ee540_add_content_text_to_proposal_sections.py  7b3c9d1e2f4a_add_created_by_to_proposals.py  868e73b72049_add_semantic_matching_and_alerts.py  a41b7c9d2e10_harden_tenant_and_match_integrity.py  e2f4a6b8c910_add_proposal_sections.py  f4c8a1d3e520_add_phase_11_billing_and_tracking.py
backend/app/: auth.py  config.py  database.py  errors.py  limiter.py  logging_config.py  main.py  models.py  schemas.py  worker.py
backend/app/routers/: auth.py  billing.py  grants.py  organizations.py  proposals.py  uploads.py
backend/app/services/: discovery.py  document_validation.py  extraction.py  llm_client.py  lockout.py  matching.py  notifications.py  proposal_content.py  proposal_export.py  proposal_gen.py  s3.py  stripe_service.py  vector_db.py
backend/app/templates/: email_match_alert.html
backend/docs/adr/: 0002-secure-cookie-session-management.md
backend/tests/: conftest.py  repro_security.py  test_auth.py  test_billing.py  test_config.py  test_grants.py  test_limiter.py  test_llm_client.py  test_main.py  test_organizations.py  test_proposal_content.py  test_proposals.py  test_routers.py  test_s3.py  test_services.py  test_uploads.py  test_worker.py
backend/tests/integration/: test_grants_integration.py
deploy/prometheus/: prometheus.yml
docs/: RUNBOOK.md  SECRET_ROTATION.md
frontend/: Dockerfile  next.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  proposal-editor.spec.ts  upload-match-proposal.spec.ts
frontend/messages/: de.json  en.json
frontend/scripts/: start-e2e.mjs
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/src/components/: CompanyProfile.tsx  DocumentList.tsx  DocumentUpload.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  (+3 more)
frontend/tests/: api_validation.test.ts  proposalApi.test.ts  proxyCsp.test.ts  settings.test.tsx
load_tests/: locustfile.py
nginx/: Dockerfile  nginx.conf
scripts/: backup_db.sh  restore_db.sh
(+46 files in other folders)
